added ravendb schedule persistence, job history, added nodeId to tracking

--- a/src/FubuTransportation.RavenDb.Testing/FubuTransportation.RavenDb.Testing.csproj
+++ b/src/FubuTransportation.RavenDb.Testing/FubuTransportation.RavenDb.Testing.csproj
@@ -162,6 +162,7 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RavenDbSchedulePersistenceTester.cs" />
     <Compile Include="RavenDbSubscriptionPersistenceTester.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
