little bit of hardening around scheduled jobs

--- a/ripple.config
+++ b/ripple.config
@@ -28,11 +28,13 @@
     <Dependency Name="FubuMVC.Media" Version="0.9.5.430" Mode="Float" />
     <Dependency Name="FubuMVC.Navigation" Version="0.9.1.205" Mode="Float" />
     <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1686" Mode="Float" />
+    <Dependency Name="FubuMVC.RavenDb" Version="0.9.5.105" Mode="Float" />
     <Dependency Name="FubuMVC.RavenDb45" Version="0.9.5.95" Mode="Float" />
     <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.647" Mode="Float" />
     <Dependency Name="FubuMVC.Spark" Version="1.0.0.576" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1672" Mode="Float" />
     <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.642" Mode="Float" />
+    <Dependency Name="FubuPersistence" Version="0.9.5.105" Mode="Float" />
     <Dependency Name="FubuPersistence45" Version="0.9.5.95" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
