--- a/src/ScheduledJobHarness/ripple.dependencies.config
+++ b/src/ScheduledJobHarness/ripple.dependencies.config
@@ -10,9 +10,11 @@ FubuMVC.JQueryUI
 FubuMVC.Katana
 FubuMVC.Navigation
 FubuMVC.OwinHost
+FubuMVC.RavenDb
 FubuMVC.Spark
 FubuMVC.StructureMap
 FubuMVC.TwitterBootstrap
+FubuPersistence
 HtmlTags
 Microsoft.CompilerServices.AsyncTargetingPack
 Microsoft.Data.Edm
@@ -21,7 +23,10 @@ Microsoft.Data.Services.Client
 Microsoft.WindowsAzure.ConfigurationManager
 Newtonsoft.Json
 Owin
+RavenDB.Client
 RavenDb.Database
+RavenDB.Embedded
 Spark
 StructureMap
 System.Spatial
+WindowsAzure.Storage
