Allow disabling of transport activators by settings.

--- a/ripple.config
+++ b/ripple.config
@@ -38,7 +38,7 @@
     <Dependency Name="FubuPersistence45" Version="0.9.5.95" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
-    <Dependency Name="LightningQueues" Version="0.1.0.47" Mode="Float" />
+    <Dependency Name="LightningQueues" Version="0.1.0.95" Mode="Fixed" />
     <Dependency Name="ManagedEsent" Version="1.8.3.2" Mode="Fixed" />
     <Dependency Name="Microsoft.CompilerServices.AsyncTargetingPack" Version="1.0.1.0" Mode="Fixed" />
     <Dependency Name="Microsoft.Data.Edm" Version="5.6.0.0" Mode="Fixed" />
