--- a/src/FubuTransportation.LightningQueues.Testing/FubuTransportation.LightningQueues.Testing.csproj
+++ b/src/FubuTransportation.LightningQueues.Testing/FubuTransportation.LightningQueues.Testing.csproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Diagnostic_endpoints_integration_Smoke_Tester.cs" />
+    <Compile Include="FubuTransportRegistryActivationTester.cs" />
     <Compile Include="Full_end_to_end_delayed_message_processing_with_Lightning_Queues.cs">
       <SubType>Code</SubType>
     </Compile>
