--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Logging\MessageLogRecord.cs" />
     <Compile Include="Logging\MessageSuccessful.cs" />
     <Compile Include="Logging\NoHandlerForMessage.cs" />
+    <Compile Include="Logging\ReceiveFailed.cs" />
     <Compile Include="Monitoring\HealthMonitoringSettings.cs" />
     <Compile Include="Monitoring\HealthMonitorPollingJob.cs" />
     <Compile Include="Monitoring\HealthStatus.cs" />
@@ -213,6 +214,7 @@
     <Compile Include="Polling\PollingServicesRegistry.cs" />
     <Compile Include="Polling\RegisterPollingJobs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReceiveFailureException.cs" />
     <Compile Include="RecordingServiceBus.cs" />
     <Compile Include="Registration\DefaultHandlerSource.cs" />
     <Compile Include="Registration\ExplicitTypeHandlerSource.cs" />
