--- a/ripple.config
+++ b/ripple.config
@@ -37,7 +37,7 @@
     <Dependency Name="FubuPersistence" Version="0.9.5.105" Mode="Float" />
     <Dependency Name="FubuPersistence45" Version="0.9.5.95" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.1.0.185" Mode="Fixed" />
     <Dependency Name="LightningQueues" Version="0.1.0.97" Mode="Float" />
     <Dependency Name="Microsoft.CompilerServices.AsyncTargetingPack" Version="1.0.1.0" Mode="Fixed" />
     <Dependency Name="Microsoft.Data.Edm" Version="5.6.0.0" Mode="Fixed" />
