Initial skeleton for diagnostics

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -394,6 +394,8 @@
   <ItemGroup>
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
-  <ItemGroup></ItemGroup>
-  <ItemGroup></ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="fubu-diagnostics\fubu-transportation.js" />
+  </ItemGroup>
 </Project>
