--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsx-loader": "^0.12.2",
     "react-bootstrap": "^0.16.1",
     "react-loader": "^1.2.0",
+    "react-router": "^0.12.2",
     "webpack": "^1.7.3"
   }
 }
