--- a/src/FubuTransportation.RavenDb.Testing/FubuTransportation.RavenDb.Testing.csproj
+++ b/src/FubuTransportation.RavenDb.Testing/FubuTransportation.RavenDb.Testing.csproj
@@ -193,4 +193,7 @@
       <Name>FubuTransportation</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
 </Project>
