--- a/src/FubuTransportation.Storyteller/ripple.dependencies.config
+++ b/src/FubuTransportation.Storyteller/ripple.dependencies.config
@@ -2,7 +2,6 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
-FubuMVC.Diagnostics
 FubuMVC.Katana
 FubuMVC.Spark
 FubuMVC.StructureMap
@@ -17,5 +16,5 @@ Selenium.WebDriver
 Selenium.WebDriverBackedSelenium
 Serenity
 Spark
-Storyteller2
+Storyteller
 StructureMap
