allowing pre-release nugets

--- a/ripple.config
+++ b/ripple.config
@@ -10,8 +10,8 @@
   <Feeds>
     <Feed Url="https://www.myget.org/F/fubumvc-edge" Mode="Fixed" Stability="Anything" />
     <Feed Url="http://build.fubu-project.org/guestAuth/app/nuget/v1/FeedService.svc" Mode="Float" Stability="ReleasedOnly" />
-    <Feed Url="http://nuget.org/api/v2" Mode="Fixed" Stability="ReleasedOnly" />
-    <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
+    <Feed Url="http://nuget.org/api/v2" Mode="Fixed" Stability="Anything" />
+    <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="Anything" />
   </Feeds>
   <Nugets>
     <Dependency Name="Bottles" Version="3.0.0.618" Mode="Fixed" />
